kubernetes/apps/app-example/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-example
  labels:
    app: app-example
