kubernetes/apps/app-example/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-example
  namespace: app-example
  labels:
    app: app-example
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: app-example
